--- a/src/pages/Languages.html
+++ b/src/pages/Languages.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
-
     <title>Tour Guide Admin Panel</title>
   </head>
   <body class="bg-gray-100 font-sans">
@@ -71,202 +71,325 @@
           class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4"
         >
           <h1 class="text-3xl font-bold text-gray-900">Manage Languages</h1>
-          <!-- <button
-            class="flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg shadow"
-            id="addLangBtn"
+          <button
+            id="refreshBtn"
+            class="inline-flex items-center gap-2 rounded-lg border border-gray-200 bg-white px-4 py-2 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50"
           >
-            <i data-lucide="plus"></i>
-            Add Language
-          </button> -->
+            <i data-lucide="refresh-ccw" class="h-4 w-4"></i> Refresh
+          </button>
         </div>
 
-        <!-- Trip Table -->
-        <div class="bg-white rounded-xl shadow overflow-x-auto">
-          <table class="min-w-full text-sm text-left">
-            <thead class="bg-gray-100 text-gray-600 uppercase text-xs">
-              <tr>
-                <th class="px-6 py-4">ID</th>
-                <th class="px-6 py-4">Language</th>
-              </tr>
-            </thead>
-            <tbody id="langTable" class="divide-y divide-gray-200 bg-white">
-              <!-- Trip rows go here -->
-            </tbody>
-          </table>
+        <!-- Filters row -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
+          <!-- Search -->
+          <div class="col-span-2">
+            <label for="searchInput" class="sr-only">Search Language</label>
+            <div class="relative">
+              <i
+                data-lucide="search"
+                class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-gray-400"
+              ></i>
+              <input
+                id="searchInput"
+                type="text"
+                placeholder="Search language..."
+                class="w-full border border-gray-200 rounded-xl pl-10 pr-4 py-2.5 bg-white shadow-sm focus:border-blue-500 focus:ring-4 focus:ring-blue-500/10 outline-none transition"
+              />
+            </div>
+          </div>
+
+          <!-- Count -->
+          <div class="flex items-center justify-between md:justify-end">
+            <div id="langCount" class="text-sm text-gray-600"></div>
+          </div>
         </div>
+
+        <!-- Table Card -->
+        <div
+          class="bg-white rounded-2xl shadow ring-1 ring-gray-200 overflow-hidden"
+        >
+          <div
+            class="flex items-center justify-between px-4 py-3 bg-gray-50 border-b"
+          >
+            <div class="text-sm text-gray-600">Languages</div>
+          </div>
+
+          <div class="overflow-x-auto">
+            <table class="min-w-full text-sm">
+              <thead
+                class="sticky top-0 z-10 bg-gray-50/95 backdrop-blur supports-[backdrop-filter]:bg-gray-50/75 text-gray-600 text-xs uppercase"
+              >
+                <tr>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="id"
+                    >
+                      <span>ID</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                  <th class="px-6 py-3 text-left font-semibold tracking-wide">
+                    <button
+                      class="flex items-center gap-1 group"
+                      data-sort="name"
+                    >
+                      <span>Language</span>
+                      <span
+                        class="ml-1 text-[10px] px-1 rounded bg-gray-200/70 text-gray-600 sort-badge hidden"
+                        >▲</span
+                      >
+                    </button>
+                  </th>
+                </tr>
+              </thead>
+              <tbody
+                id="langTable"
+                class="divide-y divide-gray-100 bg-white"
+              ></tbody>
+            </table>
+          </div>
+        </div>
+
+        <!-- Pagination -->
+        <div
+          id="pagination"
+          class="mt-6 flex justify-center items-center gap-3 text-sm font-medium"
+        ></div>
       </main>
     </div>
 
-    <!-- Modal (hidden by default) -->
-    <!-- <div
-      id="langModel"
-      class="fixed top-0 right-0 z-50 h-full w-full max-w-md bg-white shadow-xl transform translate-x-full transition-transform duration-300 ease-in-out hidden"
-    >
-      <div class="p-6 flex flex-col h-full">
-        <div class="flex items-center justify-between mb-4">
-          <h2 class="text-xl font-semibold text-gray-800">Add language</h2>
-          <button
-            type="button"
-            id="cancelBtn"
-            class="text-gray-500 hover:text-gray-700 text-2xl leading-none"
-          >
-            &times;
-          </button>
-        </div> -->
-
-        <!-- <form id="langForm" class="flex flex-col flex-1 gap-6 overflow-auto">
-          <input type="hidden" id="langId" name="id" />
-
-          <div class="space-y-1">
-            <label class="block font-medium">language Name</label>
-            <input
-              title="Name"
-              type="text"
-              name="Name"
-              class="w-full border rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500"
-              required
-            />
-          </div>
-
-          <div class="mt-auto flex justify-end space-x-3">
-            <button
-              type="button"
-              id="cancelBtn"
-              class="px-5 py-2 rounded bg-gray-200 hover:bg-gray-300"
-            >
-              Cancel
-            </button>
-            <button
-              type="submit"
-              class="px-5 py-2 rounded bg-blue-600 hover:bg-blue-700 text-white"
-            >
-              Save
-            </button>
-          </div>
-        </form> -->
-      </div>
-    </div>
-
     <script>
-      lucide.createIcons();
+      document.addEventListener("DOMContentLoaded", () => {
+        if (window.lucide?.createIcons) lucide.createIcons();
+      });
 
-      const modal = document.getElementById("langModel");
-      const form = document.getElementById("langForm");
+      // Elements
       const tableBody = document.getElementById("langTable");
+      const searchInput = document.getElementById("searchInput");
+      const refreshBtn = document.getElementById("refreshBtn");
+      const countEl = document.getElementById("langCount");
 
-      // Load categories on page load
-      async function loadLanguages(searchQuery = "") {
+      // State
+      let allLanguages = [];
+      let currentPage = 1;
+      const pageSize = 12;
+      let searchTerm = "";
+      let sortState = { key: null, dir: "asc" }; // id | name
+
+      // ===== UI helpers =====
+      function showSkeleton(rows = 10) {
+        let html = "";
+        for (let i = 0; i < rows; i++) {
+          html += `
+            <tr class="hover:bg-gray-50/70">
+              <td class="px-6 py-4"><div class="h-4 w-16 rounded tg-shimmer"></div></td>
+              <td class="px-6 py-4"><div class="h-4 w-52 rounded tg-shimmer"></div></td>
+            </tr>`;
+        }
+        tableBody.innerHTML = html;
+      }
+
+      function sanitize(text) {
+        return (text ?? "").toString();
+      }
+
+      // ===== Sorting / Filtering / Paging =====
+      function applySort(items) {
+        if (!Array.isArray(items) || !sortState.key) return items || [];
+        const dir = sortState.dir === "desc" ? -1 : 1;
+        const key = sortState.key;
+        return [...items].sort((a, b) => {
+          let va = a[key];
+          let vb = b[key];
+          if (key === "id") {
+            va = Number(va);
+            vb = Number(vb);
+          }
+          va = (va ?? "").toString().toLowerCase();
+          vb = (vb ?? "").toString().toLowerCase();
+          if (va < vb) return -1 * dir;
+          if (va > vb) return 1 * dir;
+          return 0;
+        });
+      }
+
+      function updateSortBadges() {
+        document.querySelectorAll("thead [data-sort]").forEach((btn) => {
+          const badge = btn.querySelector(".sort-badge");
+          if (!badge) return;
+          const active = sortState.key === btn.dataset.sort;
+          badge.classList.toggle("hidden", !active);
+          if (active) badge.textContent = sortState.dir === "asc" ? "▲" : "▼";
+        });
+      }
+
+      function setupTableSort() {
+        document.querySelectorAll("thead [data-sort]").forEach((btn) => {
+          btn.addEventListener("click", () => {
+            const key = btn.dataset.sort;
+            if (!key) return;
+            if (sortState.key === key) {
+              sortState.dir = sortState.dir === "asc" ? "desc" : "asc";
+            } else {
+              sortState.key = key;
+              sortState.dir = "asc";
+            }
+            updateSortBadges();
+            render(); // re-render current page
+          });
+        });
+      }
+
+      function getFiltered() {
+        const q = searchTerm.trim().toLowerCase();
+        if (!q) return [...allLanguages];
+        return allLanguages.filter(
+          (l) =>
+            sanitize(l.name).toLowerCase().includes(q) ||
+            sanitize(l.id).toLowerCase().includes(q)
+        );
+      }
+
+      function paginate(list, page, size) {
+        const start = (page - 1) * size;
+        return list.slice(start, start + size);
+      }
+
+      // ===== Rendering =====
+      function render() {
+        const filtered = getFiltered();
+        const sorted = applySort(filtered);
+        const pageItems = paginate(sorted, currentPage, pageSize);
+
+        // Count badge
+        countEl.textContent = `${filtered.length} language${
+          filtered.length === 1 ? "" : "s"
+        }`;
+
+        tableBody.innerHTML = "";
+
+        if (!pageItems.length) {
+          tableBody.innerHTML = `
+            <tr>
+              <td colspan="2" class="px-6 py-12">
+                <div class="flex items-center justify-center gap-3 text-gray-600">
+                  <i data-lucide="languages" class="h-5 w-5"></i>
+                  <span>No languages found</span>
+                </div>
+              </td>
+            </tr>`;
+          if (window.lucide?.createIcons) lucide.createIcons();
+          renderPagination(1, 1); // empty state
+          return;
+        }
+
+        // Build rows using DOM APIs (safe)
+        pageItems.forEach((lang) => {
+          const tr = document.createElement("tr");
+          tr.className = "hover:bg-gray-50 transition-colors";
+
+          const tdId = document.createElement("td");
+          tdId.className = "px-6 py-4";
+          tdId.innerHTML = `<span class="inline-flex items-center justify-center h-7 w-10 rounded-lg bg-indigo-600/10 text-indigo-700 ring-1 ring-indigo-200 tabular-nums font-semibold">${sanitize(
+            lang.id
+          )}</span>`;
+
+          const tdName = document.createElement("td");
+          tdName.className = "px-6 py-4";
+          tdName.textContent = sanitize(lang.name);
+
+          tr.appendChild(tdId);
+          tr.appendChild(tdName);
+          tableBody.appendChild(tr);
+        });
+
+        if (window.lucide?.createIcons) lucide.createIcons();
+        renderPagination(currentPage, filtered.length);
+      }
+
+      function renderPagination(current, totalItems) {
+        const container = document.getElementById("pagination");
+        const totalPages = Math.max(1, Math.ceil(totalItems / pageSize));
+        container.innerHTML = "";
+
+        const group = document.createElement("div");
+        group.className =
+          "inline-flex overflow-hidden rounded-xl ring-1 ring-gray-200 bg-white shadow-sm";
+
+        const prevBtn = document.createElement("button");
+        prevBtn.textContent = "Previous";
+        prevBtn.disabled = current === 1;
+        prevBtn.className = "px-4 py-2 disabled:opacity-50 hover:bg-gray-50";
+        prevBtn.onclick = () => {
+          if (current > 1) {
+            currentPage--;
+            render();
+          }
+        };
+
+        const info = document.createElement("span");
+        info.className = "px-4 py-2 text-gray-600 border-x border-gray-200";
+        info.textContent = `Page ${current} of ${totalPages}`;
+
+        const nextBtn = document.createElement("button");
+        nextBtn.textContent = "Next";
+        nextBtn.disabled = current === totalPages;
+        nextBtn.className = "px-4 py-2 disabled:opacity-50 hover:bg-gray-50";
+        nextBtn.onclick = () => {
+          if (current < totalPages) {
+            currentPage++;
+            render();
+          }
+        };
+
+        group.appendChild(prevBtn);
+        group.appendChild(info);
+        group.appendChild(nextBtn);
+        container.appendChild(group);
+      }
+
+      // ===== Data =====
+      async function loadLanguages() {
         try {
-          let url = `/api/Language/GetAllLanguages`;
-
-          const res = await fetch(url);
+          showSkeleton();
+          const res = await fetch(`/api/Language/GetAllLanguages`);
           const data = await res.json();
-          console.log("API response:", data);
 
-          if (res.ok && data.succeeded) {
-            const languages = data.data;
-            tableBody.innerHTML = "";
-
-            languages.forEach((lang) => {
-              const row = document.createElement("tr");
-              row.innerHTML = `
-            <td class="px-6 py-3">${lang.id}</td>
-            <td class="px-6 py-3">${lang.name}</td>
-            
-          `;
-              tableBody.appendChild(row);
-            });
-            lucide.createIcons();
+          if (res.ok && (data.succeeded ?? true)) {
+            allLanguages = Array.isArray(data.data) ? data.data : [];
+            currentPage = 1;
+            render();
           } else {
-            alert("Failed to load Languages");
+            tableBody.innerHTML = `
+              <tr>
+                <td colspan="2" class="px-6 py-8 text-center text-red-500">Failed to load languages</td>
+              </tr>`;
           }
         } catch (err) {
           console.error(err);
-          alert("Error loading Languages");
+          tableBody.innerHTML = `
+            <tr>
+              <td colspan="2" class="px-6 py-8 text-center text-red-500">Network error loading languages</td>
+            </tr>`;
         }
       }
 
-      // function editLang(id, name) {
-      //   form.elements["Name"].value = name;
-      //   form.elements["id"].value = id;
-      //   modal.classList.remove("hidden");
-      // }
+      // ===== Events =====
+      searchInput.addEventListener("input", () => {
+        searchTerm = searchInput.value;
+        currentPage = 1;
+        render();
+      });
 
-      // Add a new Lang
-      // form.addEventListener("submit", async (e) => {
-      //   e.preventDefault();
+      refreshBtn.addEventListener("click", () => {
+        loadLanguages();
+      });
 
-      //   const id = form.elements["id"].value;
-      //   const name = form.elements["Name"].value;
-      //   const formData = { name };
-
-      //   const isEdit = Boolean(id);
-
-      //   const endpoint = isEdit
-      //     ? `/api/Language/UpdateLanguage/${id}`
-      //     : `/api/Language/AddLanguage`;
-
-      //   const method = isEdit ? "PUT" : "POST";
-
-      //   try {
-      //     const res = await fetch(endpoint, {
-      //       method,
-      //       headers: { "Content-Type": "application/json" },
-      //       body: JSON.stringify(formData),
-      //     });
-
-      //     const data = await res.json();
-      //     if (res.ok && data.succeeded) {
-      //       alert(isEdit ? "Language updated!" : "Language added!");
-      //       form.reset();
-      //       modal.classList.add("hidden");
-      //       loadLanguages();
-      //     } else {
-      //       alert("Failed: " + (data.message || "Unknown error"));
-      //     }
-      //   } catch (err) {
-      //     console.error(err);
-      //     alert("Error while saving Language.");
-      //   }
-      // });
-
-      // Delete Lang
-      // async function deleteLang(id) {
-      //   if (!confirm("Are you sure you want to delete this Language?")) return;
-
-      //   try {
-      //     const res = await fetch(`/api/Language/DeleteLanguage/${id}`, {
-      //       method: "DELETE",
-      //     });
-
-      //     const data = await res.json();
-      //     if (res.ok && data.succeeded) {
-      //       alert("Language deleted");
-      //       loadLanguages();
-      //     } else {
-      //       alert("Failed to delete Language");
-      //     }
-      //   } catch (err) {
-      //     console.error(err);
-      //     alert("Error deleting Language");
-      //   }
-      // }
-
-      // Show modal
-      // document.getElementById("addLangBtn").addEventListener("click", () => {
-      //   modal.classList.remove("hidden");
-      //   setTimeout(() => modal.classList.remove("translate-x-full"), 10);
-      // });
-
-      // document.querySelectorAll("#cancelBtn").forEach((btn) => {
-      //   btn.addEventListener("click", () => {
-      //     modal.classList.add("translate-x-full");
-      //     setTimeout(() => modal.classList.add("hidden"), 300);
-      //     form.reset();
-      //   });
-      // });
-
-      // Initial load
+      setupTableSort();
       loadLanguages();
     </script>
   </body>
